更新作者信息，修正linux书图片

--- a/服务器使用说明.md
+++ b/服务器使用说明.md
@@ -9,6 +9,13 @@ html:
 ---
 
 [toc]
+
+<div align="center" style="color: #666; font-size: 0.9em; border-top: 1px solid #eee; padding-top: 10px;">
+  <p>作者：<strong>Guo</strong></p>
+  <p>Github：<a href="https://github.com/Sherry520">@Guo</a></p>
+  <a href="mailto:22561797+Sherry520@users.noreply.github.com" style="color: #0078d4; text-decoration: none;">22561797+Sherry520@users.noreply.github.com</a>
+  <p>最后更新：<time>2024-04-08</time></p>
+</div>
 ___
 
 ## 前言提示
@@ -32,7 +39,7 @@ ___
 后文内容建立于你已经熟练掌握 Linux 操作系统，所以先学习如何使用。
 
 <p>
-<img src="img/1744078790869.png" alt="1744078790869" style="float:right" width="100" /></p>
+<img src="img/1744085820484.png" alt="1744078790869" style="float:right" width="100" /></p>
 
 **推荐书籍：** 自行学习 Linux 操作系统的使用，推荐书籍【Linux 命令行大全】，本实验室服务器系统采用 CentOS 7，基础操作与 Ubuntu 一致。
 
